--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
-  <body>
-  	{% include menu.html %}
-    {{content}}
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>{{ page.title }}</title>
+		<link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,500,600,700" rel="stylesheet">
+		<link rel="stylesheet" href="/assets/css/styles.css">
+	</head>
+	<body>
+		<header>
+			<div class="header__logo">
+				<img src="" alt="">
+			</div>
+			<div class="header__text">
+				<h1>Name</h1>
+				<h2>Alt</h2>
+			</div>
+		</header>
+
+		<section class="section__menu">
+			{% include menu.html %}
+		</section>
+
+		<main>
+			{{content}}
+		</main>
+	</body>
 </html>
