--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+---
+header_text_title: Name
+header_text_sub: Alt
+---
 <!DOCTYPE html>
 <html>
 	<head>
@@ -5,21 +9,48 @@
 		<title>{{ page.title }}</title>
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,500,600,700" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/styles.css">
+		<link rel="stylesheet" href="/assets/css/slick.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="assets/js/slick.min.js"></script>
+		<script src="assets/js/main.js"></script>
 	</head>
 	<body>
-		<header>
-			<div class="header__logo">
-				<img src="" alt="">
-			</div>
-			<div class="header__text">
-				<h1>Name</h1>
-				<h2>Alt</h2>
-			</div>
-		</header>
+		<div class="header__wrapper">
+			<header>
+				<div class="header__page">
+					<div class="header__logo">
+						<i class="icon-logo"></i>
+					</div>
+					<div class="header__text">
+						<h1>{{ layout.header_text_title }}</h1>
+						<h2>{{ layout.header_text_sub }}</h2>
+					</div>
+				</div>
+				<div class="header__background">
+					<div class="header__background__over"></div>
+					<div class="header__background__list">
+						{% assign backgrounds = site.static_files | where: "background", true %}
+						{% for background in backgrounds %}
+						<div class="header__background__img" style="background-image: url('{{ background.path }}')"></div>
+						{% endfor %}
+					</div>
+				</div>
+			</header>
 
-		<section class="section__menu">
-			{% include menu.html %}
-		</section>
+			<section class="section__menu">
+				<div class="header__page">
+					<div class="header__logo">
+						<i class="icon-logo"></i>
+					</div>
+					<div class="header__text">
+						<h1>{{ layout.header_text_title }}</h1>
+						<h2>{{ layout.header_text_sub }}</h2>
+					</div>
+				</div>
+				{% include menu.html %}
+			</section>
+		</div>
 
 		<main>
 			{{content}}
