--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,6 @@
+$main-color: #00208a;
+//$main-color: red;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,6 +22,248 @@ ul {
 	list-style: none;
 }
 
-.current {
-	outline: 1px solid red;
+.header__wrapper {
+	width: 100%;
+	transition: 1s;
+}
+
+header {
+	position: relative;
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+	* {
+		color: white;
+	}
+}
+
+.header__page {
+	position: relative;
+	z-index: 100;
+}
+
+.header__background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	* {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+.header__background__over {
+	background-color: $main-color;
+	opacity: 0.50;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 4;
+}
+
+.header__background__list {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
+
+.header__background__img {
+	//outline: 1px solid blue;
+	background-size: cover;
+	background-position: center;
+}
+
+header .header__page {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+}
+
+header .header__text {
+	text-align: center;
+}
+
+header .header__logo {
+	padding: 10px 0;
+	i {
+		font-size: 80px;
+	}
+}
+
+.section__menu {
+	.header__page {
+		display: none;
+	}
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	nav {
+		a {
+			display: inline-block;
+			padding: 15px 20px;
+			transition: 0.25s;
+			&:hover {
+				color: $main-color;
+			}
+		}
+	}
+}
+
+.menu__current {
+	color: $main-color;
+	border-bottom: 2px solid $main-color;
+	font-weight: 500;
+}
+
+.alt_menu {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	background-color: white;
+	justify-content: space-between;
+	box-shadow: 0 -2px 10px rgba(0,0,0,0.25);
+
+	.header__page {
+		display: flex;
+		margin: 0 0 0 20px;
+	}
+
+	.header__text {
+		margin: 0 0 0 10px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		h1 {
+			line-height: 20px;
+			color: $main-color;
+		}
+		h2 {
+			font-size: 20px;
+			color: $main-color;
+		}
+	}
+
+	.header__logo {
+		height: 52px;
+		display: flex;
+		align-items: center;
+		i {
+			font-size: 40px;
+			color: $main-color;
+		}
+	}
+}
+
+.btn {
+	display: inline-block;
+	margin: 25px 0;
+	transition: 0.25s;
+	border: 1px solid $main-color;
+	a {
+		display: block;
+		padding: 15px 20px;
+		transition: 0.25s;
+		color: $main-color;
+	}
+	&:hover {
+		box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+		background-color: $main-color;
+		border: 1px solid transparent;
+		a {
+			color: white;
+		}
+	}
+}
+
+section {
+	position: relative;
+}
+
+.section__wrapper {
+  width: 100%;
+  max-width: 1200px;
+	position: relative;
+	margin: 0 auto;
+	padding: 30px 0;
+	.section__title {
+		h1 {
+			font-size: 60px;
+		}
+	}
+	z-index: 10;
+}
+
+.alt__background {
+	background-color: $main-color;
+	opacity: 0.05;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+}
+
+.section__content {
+	margin-top: 20px;
+}
+
+.list__events {
+	ul {
+		display: flex;
+		justify-content: space-evenly;
+	}
+	li {
+		width: calc(25% - 20px);
+	}
+	figure {
+		transition: 0.25s;
+		border-radius: 5px;
+		&:hover {
+			box-shadow: 0px 2px 2px rgba(0,0,0,0.25);
+			.figure__img {
+				> div {
+					transform: scale(1.05);
+				}
+			}
+		}
+		.figure__img {
+			width: 100%;
+			padding-top: 56.25%;
+			position: relative;
+			overflow: hidden;
+			> div {
+				background-size: cover;
+				background-position: center;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				transition: 0.25s;
+			}
+		}
+	}
+	figcaption {
+		padding: 15px;
+		background-color: rgba(255, 255, 255, 1);
+		h2 {
+			line-height: 24px;
+			height: 48px;
+			color: $main-color;
+		}
+		span {
+			display: inline-block;
+			margin: 10px 0 0 0;
+			font-size: 13px;
+		}
+	}
 }
