--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,15 +1,27 @@
-$main-color: #00208a;
+$main-color: #6D485C;
 //$main-color: red;
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Cabin", sans-serif;
+	font-family: "Lustria", sans-serif;
+}
+
+::selection {
+	background: $main-color;
+	color: white;
+}
+
+a {
+	transition: 0.25s;
+	&:hover {
+		opacity: 0.8;
+	}
 }
 
 h1, h2, h3 {
-	font-family: "Markazi Text", serif;
+	font-family: "Adamina", serif;
 	font-weight: normal;
 }
 
@@ -30,11 +42,32 @@ ul {
 header {
 	position: relative;
 	width: 100%;
-	height: 200px;
+	height: 100vh;
 	overflow: hidden;
 	* {
-		color: white;
+		color: black;
 	}
+}
+
+.home2 *, .home3 * {
+	color: white;
+}
+
+.values {
+	width: 98%;
+	position: absolute !important;
+	z-index: 9999;
+	top: 30px;
+	left: 1%;
+}
+
+.values_value {
+	position: absolute !important;
+	z-index: 9999;
+	top: 10px;
+	left: 5px;
+	color: yellow;
+	font-size: 20px;
 }
 
 .header__page {
@@ -56,12 +89,21 @@ header {
 }
 
 .header__background__over {
-	background-color: $main-color;
-	opacity: 0.50;
+	// background-color: $main-color;
+	background-color: white;
+	opacity: 0.5;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 4;
+}
+
+.home2 .header__background__over {
+	background-color: black;
+}
+
+.home3 .header__background__over {
+	background-color: $main-color;
 }
 
 .header__background__list {
@@ -88,16 +130,28 @@ header .header__page {
 
 header .header__text {
 	text-align: center;
+	* {
+		font-family: "philosopher", serif;
+	}
+	h1 {
+		display: block;
+		margin: 20px 0 0 0;
+		font-size: 60px;
+	}
+	h2 {
+		display: none;
+	}
 }
 
 header .header__logo {
 	padding: 10px 0;
 	i {
-		font-size: 80px;
+		font-size: 200px;
 	}
 }
 
 .section__menu {
+	background-color: $main-color;
 	.header__page {
 		display: none;
 	}
@@ -107,11 +161,9 @@ header .header__logo {
 	nav {
 		a {
 			display: inline-block;
-			padding: 15px 20px;
+			padding: 25px 20px;
 			transition: 0.25s;
-			&:hover {
-				color: $main-color;
-			}
+			color: white;
 		}
 	}
 }
@@ -172,6 +224,7 @@ header .header__logo {
 		padding: 15px 20px;
 		transition: 0.25s;
 		color: $main-color;
+		font-size: 14px;
 	}
 	&:hover {
 		box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
@@ -188,14 +241,14 @@ section {
 }
 
 .section__wrapper {
-  width: 100%;
-  max-width: 1200px;
+	width: 100%;
+	max-width: 1200px;
 	position: relative;
 	margin: 0 auto;
 	padding: 30px 0;
 	.section__title {
 		h1 {
-			font-size: 60px;
+			font-size: 30px;
 		}
 	}
 	z-index: 10;
@@ -258,12 +311,23 @@ section {
 		h2 {
 			line-height: 24px;
 			height: 48px;
+			font-size: 15px;
 			color: $main-color;
 		}
 		span {
 			display: inline-block;
 			margin: 10px 0 0 0;
-			font-size: 13px;
+			font-size: 12px;
+		}
+	}
+}
+
+.general__text {
+	p {
+		font-size: 14px;
+		a {
+			color: $main-color;
+			text-decoration: underline;
 		}
 	}
 }
