--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,10 @@ $main-color: #6D485C;
 	font-family: "Lustria", sans-serif;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 ::selection {
 	background: $main-color;
 	color: white;
@@ -70,6 +74,33 @@ header {
 	font-size: 20px;
 }
 
+.go_down {
+	width: 100%;
+	height: 30px;
+	position: absolute;
+	z-index: 100;
+	bottom: 0;
+	left: 0;
+	justify-content: flex-end;
+	text-align: center;
+	flex-direction: column;
+
+	i, i::before {
+		color: white;
+		cursor: pointer;
+		animation: anim-jump 2s infinite linear;
+	}
+}
+
+@keyframes anim-jump {
+	0% {
+		transform: translate(10, 0);
+	}
+	100% {
+		transform: translate(0, 0);
+	}
+}
+
 .header__page {
 	position: relative;
 	z-index: 100;
@@ -91,7 +122,7 @@ header {
 .header__background__over {
 	// background-color: $main-color;
 	background-color: white;
-	opacity: 0.5;
+	opacity: 0.47;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -152,12 +183,7 @@ header .header__logo {
 
 .section__menu {
 	background-color: $main-color;
-	.header__page {
-		display: none;
-	}
 	width: 100%;
-	display: flex;
-	justify-content: center;
 	nav {
 		a {
 			display: inline-block;
@@ -165,6 +191,23 @@ header .header__logo {
 			transition: 0.25s;
 			color: white;
 		}
+	}
+}
+
+.section__menu__wrapper {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+
+	.header__page {
+		height: 100%;
+		margin-left: 30px;
+	}
+
+	.icon-logo {
+		font-size: 50px;
+		color: white;
 	}
 }
 
@@ -214,6 +257,26 @@ header .header__logo {
 	}
 }
 
+.home .main_menu {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+}
+
+@media all and (max-width: 1080px) {
+	.main_menu {
+		nav {
+			display: none;
+		}
+	}
+}
+
+.main__on__menu {
+	margin-top: 72px;
+	//padding-top: 30px
+}
+
 .btn {
 	display: inline-block;
 	margin: 25px 0;
@@ -236,6 +299,10 @@ header .header__logo {
 	}
 }
 
+main {
+	min-height: calc(100vh - 301px);
+}
+
 section {
 	position: relative;
 }
@@ -247,6 +314,7 @@ section {
 	margin: 0 auto;
 	padding: 30px 0;
 	.section__title {
+		margin: 30px 0 50px 0;
 		h1 {
 			font-size: 30px;
 		}
@@ -254,8 +322,19 @@ section {
 	z-index: 10;
 }
 
+@media all and (max-width: 1200px) {
+	.section__wrapper {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+}
+
+.section__title {
+	color: $main-color;	
+}
+
 .alt__background {
-	background-color: $main-color;
+	//background-color: $main-color;
 	opacity: 0.05;
 	width: 100%;
 	height: 100%;
@@ -274,6 +353,15 @@ section {
 		display: flex;
 		justify-content: space-evenly;
 	}
+
+	ul.list__columns-2 li {
+		width: calc(50% - 100px);
+	}
+
+	ul.list__columns-3 li {
+		width: calc(33.33% - 60px);
+	}
+
 	li {
 		width: calc(25% - 20px);
 	}
@@ -314,6 +402,10 @@ section {
 			font-size: 15px;
 			color: $main-color;
 		}
+		h3 {
+			line-height: 30px;
+			font-size: 12px;
+		}
 		span {
 			display: inline-block;
 			margin: 10px 0 0 0;
@@ -329,5 +421,193 @@ section {
 			color: $main-color;
 			text-decoration: underline;
 		}
+	}
+}
+
+footer {
+	widht: 100%;
+}
+
+.footer__wrapper {
+	width: 100%;
+	max-width: 1200px;
+	border-top: 1px solid $main-color;
+	margin: 0 auto;
+	padding: 20px 0;
+
+	.section__title {
+		text-align: center;
+	}
+}
+
+.footer__info__wrapper {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 30px
+}
+
+@media all and (max-width: 600px) {
+	.footer__info__wrapper {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center
+	}
+	.footer__links {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.footer__info {
+		margin-top: 20px;
+		padding-top: 20px;
+		border-top: 1px solid $main-color;
+		text-align: center;
+	}
+}
+
+.footer__links {
+	a {
+		display: flex;
+		align-items: center;
+		margin-bottom: 10px;
+	}
+
+	i, i::before {
+		color: $main-color;
+	}
+
+	.icon-mail4 {
+		margin-right: 5px;
+	}
+
+	.icon-twitter {
+		margin-right: 5px
+	}
+
+	.icon-rg {
+		font-size: 13px;
+	}
+}
+
+.footer__info {
+	font-size: 14px;
+	line-height: 23px;
+
+	h1 {
+		font-size: 1.1em;
+		color: $main-color;
+		font-weight: normal;
+	}
+
+	h2 {
+		color: $main-color;
+		font-weight: normal;
+		font-size: 1.05em;
+	}
+
+	h3 {
+		font-size: 1em;
+	}
+}
+
+.two-columns {
+	.extra__column {
+		width: 50%;
+		img {
+			width: 70%;
+		}
+		p {
+			display: flex;
+			justify-content: center;
+		}
+	}
+	.content {
+		width: 50%;
+	}
+}
+
+@media all and (max-width: 750px) {
+	.content__wrapper {
+		flex-wrap: wrap;
+	}
+	.two-columns {
+		.extra__column, .content {
+			width: 100% !important;
+		}
+		.extra__column {
+			margin-bottom: 20px;
+			img {
+				width: 75vw;
+				height: 75vw;
+				object-fit: cover;
+			}
+		}
+	}
+}
+
+.content__wrapper {
+	a {
+		color: $main-color;
+	}
+	display: flex;
+	.content {
+		p {
+			margin-bottom: 20px;
+		}
+		h1 {
+			margin-bottom: 20px;
+			text-transform: capitalize;
+		}
+		h2 {
+			margin-bottom: 15px;
+			color: $main-color;
+			font-size: 20px;
+		}
+	}
+}
+
+.publication__content {
+	margin-bottom: 20px;
+	p {
+		display: inline;
+	}
+	a {
+		font-size: 12px;
+	}
+	table {
+		border-collapse: collapse;
+		width: 100%;
+		max-width: 1000px;
+		margin: 0 auto;
+		.border__bottom {
+			border-bottom: 1px solid $main-color;
+		}
+		tr:last-child {
+			border-bottom: 1px solid transparent;
+		}
+	}
+}
+
+.grant__details {
+	margin: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	h2 {
+		color: black !important;
+		font-size: 16px !important;
+		margin-bottom: 0 !important;
+		line-height: 20px;
+		text-align: left !important;
+	}
+	p {
+		font-weight: normal;
+		font-size: 14px;
+		margin-bottom: 0 !important;
+		margin-top: 10px;
+		text-align: left !important;
 	}
 }
